Added some series tools and started looking into conductivity calculation

--- a/report/eqns/phieqm.tex
+++ b/report/eqns/phieqm.tex
@@ -1,1 +1,1 @@
-&2 \frac{\phi \psi^{2}}{z^{2} \left(z^{3} -1\right)} + \frac{\partial^{2}}{\partial^{2} z}  \phi
+&\phi \left(2 L^{2} \psi^{2} z^{3} zh^{3} - 2 L^{2} \psi^{2} zh^{6}\right)\nonumber\\&+\left(z^{8} - 2 z^{5} zh^{3} + z^{2} zh^{6}\right) \frac{\partial^{2}}{\partial^{2} z}  \phi
