--- a/report/eqns/psieqm.tex
+++ b/report/eqns/psieqm.tex
@@ -1,1 +1,1 @@
-&\psi \left(2 \frac{m}{z^{4}} + 2 \frac{\phi^{2}}{z^{2} \left(z^{3} -1\right)}\right) + \left(2 z - \frac{2}{z^{2}}\right) \frac{\partial^{2}}{\partial^{2} z}  \psi\nonumber\\&+\left(2 + \frac{4}{z^{3}}\right) \frac{\partial}{\partial z} \psi
+&\psi \left(2 L^{4} m_{2} z^{3} zh^{3} - 2 L^{4} m_{2} zh^{6} + 2 L^{2} \phi^{2} z^{2} zh^{6} + 2 L^{2} z^{5} zh^{3} \operatorname{Ax}^{2}\left(z,t\right) - 2 L^{2} z^{2} zh^{6} \operatorname{Ax}^{2}\left(z,t\right)\right)\nonumber\\&+\left(2 L^{2} z^{8} - 4 L^{2} z^{5} zh^{3} + 2 L^{2} z^{2} zh^{6}\right) \frac{\partial^{2}}{\partial^{2} z}  \psi\nonumber\\&+\left(2 L^{2} z^{7} + 2 L^{2} z^{4} zh^{3} - 4 L^{2} z zh^{6}\right) \frac{\partial}{\partial z} \psi
