made nice plot of ferrel glover tinkham

--- a/report/report.bib
+++ b/report/report.bib
@@ -116,3 +116,16 @@ author = "Peter Breitenlohner and Daniel Z. Freedman"
   url = {http://link.aps.org/doi/10.1103/PhysRevLett.28.1082},
   publisher = {American Physical Society}
 }
+@article{PhysRev.109.1398,
+  title = {Conductivity of Superconducting Films: A Sum Rule},
+  author = {Ferrell, Richard A. and Glover, Rolfe E.},
+  journal = {Phys. Rev.},
+  volume = {109},
+  issue = {4},
+  pages = {1398--1399},
+  year = {1958},
+  month = {Feb},
+  doi = {10.1103/PhysRev.109.1398},
+  url = {http://link.aps.org/doi/10.1103/PhysRev.109.1398},
+  publisher = {American Physical Society}
+}
