--- a/report/report.tex
+++ b/report/report.tex
@@ -474,11 +474,19 @@ The $\psi$ condensate should be obtained without any source. Boundary conditions
 
 The fields all have the unit of inverse length and $\rho$ thus has unit inverse length squared. Solutions can be obtained at any temperature by choosing different values of $z_h$. The temperature can be chosen such that the charge density $\rho$ is constant for all solutions. The numerical solution gives $\rho z_h^2$. Choosing a constant $\rho=1$ gives $z_h$ and thus the temperature. We call the highest temperature obtained $T_c$.
 \chapter{Results}
+The numerical results are here presented.
 \section{Condensate}
+This section shows results from 
 \fig{O2Tzeros}{Curves corresponding to different solutions at the same temperature.}
 \section{Conductivity}
+The obtained conductivity for temperatures above the $T_c$ is $\sigma(\omega)=1$. This agrees with TODO. The conductivity changes when the condensate forms. An energy gap $\Delta$ forms and the conductivity for $\omega<\Delta$ goes to 0 as the temperature is lowered. The superconductivity is not immidiately evident from the obtained conductivity curves. There is a delta-function at $\omega=0$ since translational invariance of the boundary theory has been assumed.
+
+\section{Sum Rule}
+The sum rule \cite{PhysRev.109.1398}.
+
 \fig{cond_Ts}{Real and imaginary part of the conductivity for different temperatures. Higher temperatures above $T_c$ give the same conductivity as for the $T=T_c$ case. \label{cond_Ts}}
 
+\fig{sum_rule_a20}{Integral}
 \section{Higher Order Term}
 This higher order term introduces a perturbation in the low frequency conductivity above the critical point. The perturbation is very close to what is expected from the Drude model of electrical conductivity. The Drude model is obtained by treating the charge carriers classically. They are expected to obey the differential equation
 \begin{equation}
