--- a/report/report.tex
+++ b/report/report.tex
@@ -66,7 +66,7 @@ The correspondence can be formulated by the GKPW equation \cite{Witten:1998qj}
 \label{GKPW}
 \end{equation}
 where $Z_{\text{CFT}}$ is the partition function of the boundary theory and $Z_{\text{strings}}$ is the partition function of the bulk theory. The relation between the Lagrangians of the theories is unknown but the boundary values of fields in the bulk theory correspond to fields in the CFT.
-\section{Restrictions}
+TODO
 Lorentz invariance, relativity, causality, locality?
 \section{Partition Function}
 The partition function is a concept from statistical physics. It is for a quantum-mechanical system defined as
